--- a/Finland-Lab-3.html
+++ b/Finland-Lab-3.html
@@ -19,8 +19,8 @@ body {
 
   
 .dashboard {
+    max-width: 800px;
     height: 600px;
-    width: 800px;
     display: grid;
     grid-gap: 15px;
     grid-template-areas: "h h h h"
@@ -32,12 +32,10 @@ body {
 
 
 
-h1 { 
+.title { 
     grid-area: h;
-    display: flex;
-    justify-content: center;
+    text-align: center;
     color: black;
-    padding-top: 2em;
   
 }
 
@@ -46,7 +44,6 @@ h1 {
     grid-area: p;
     flex-direction: column;
     justify-content: flex-end;
-    align-items: flex-start;
     background-image: url(finland-8.jpg);
     background-size:cover ;
    
@@ -92,7 +89,6 @@ grid-area: g ;
 display: flex;
 flex-direction: column;
 justify-content: flex-end;
-align-items: flex-start;
 background-image: url(finland-1.jpg);
 background-size: cover;
 
@@ -102,7 +98,7 @@ background-size: cover;
 grid-area: n;
 display: flex;
 flex-direction: column;
-justify-content: flex-start;
+justify-content: space-evenly;
 align-items: flex-start;
 background-image: url(finland-5.jpg);
 background-size: cover;
@@ -113,10 +109,24 @@ background-size: cover;
 .news button {
     border-radius: .25em;
     align-self: flex-end;
-    margin-top: 1em ;
+    padding: 1em ;
   
 }
 
+.grid-cell {
+  background-color: black;
+  padding: 1em;
+}
+
+
+@media only screen and (max-width: 800px) {
+  .dashboard {
+    grid-template-areas: "h h h"
+                         "p p w"
+                         "d d d"
+                         "w g g";
+  }
+}
 
 
 
