[ADD] grid-template rows and columns to media query @ 800px

--- a/Finland-Lab-3.html
+++ b/Finland-Lab-3.html
@@ -125,8 +125,16 @@ background-size: cover;
                          "p p w"
                          "d d d"
                          "w g g";
+    grid-template-rows: 100px 200px 200px 200px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+  
   }
 }
+
+
 
 
 
